# qr-live-scanner_tencent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: douyin-research.md  interfaces.md  provide-real-values.md  tencent-protocol-research.md
examples/tencent-protocol-research-pack/: README.md  qq-account-login.note.md  qq-account-login.sample.json  qq-account-login.toml
src/qr_live_scanner_tencent/: __init__.py  __main__.py  config.py  interfaces.py  logging.py  monitor.py  orchestrator.py  pipeline.py  runtime.py  smoke.py
src/qr_live_scanner_tencent/accounts/: __init__.py  device.py  session.py  store.py  tencent_qr_login.py
src/qr_live_scanner_tencent/auth/: __init__.py  tencent.py
src/qr_live_scanner_tencent/detection/: __init__.py  decoder.py  dedup.py  roi.py  roi_fallback.py
src/qr_live_scanner_tencent/gui/: __init__.py  about.py  main_window.py  monitor.py  roi_editor.py  snapshot.py  (+1 more)
tests/: conftest.py  test_account_store.py  test_auth_tencent.py  test_ci_workflow.py  test_config_and_fixtures.py  test_contracts.py  test_decode_monitor.py  test_detection_pipeline.py  test_docs.py  test_gui_cli.py  test_gui_shell.py  test_gui_state.py  test_har_redactor.py  test_orchestrator.py  test_pipeline.py  test_real_decode_smoke.py  test_roi_fallback.py  test_runtime.py  test_smoke_cli.py  test_smoke_run.py  test_stream_bilibili.py  test_stream_douyin.py  test_stream_douyin_browser.py  test_stream_ffmpeg_reader.py  test_tencent_account_cli.py  test_tencent_account_qr_login.py  test_tencent_protocol_sample.py
(+9 files in other folders)
